--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Build (Go)
+name: CICD
 
 on:
   push:
@@ -26,8 +26,13 @@ jobs:
     name: Deploy Site
     runs-on: ubuntu-18.04
     needs: build
-    if: github.event.pull_request.merged == true
     steps:
+    - name: Set up Go 1.15
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.15
+    - name: Check out code (into the Go module directory)
+      uses: actions/checkout@v2
     - name: Generate HTML
       run: go run ./cmd/main.go
     - name: Save website artifact
