--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,6 +7,8 @@ on:
     branches: [ master ]
     paths-ignore:
     - '*.md'
+  schedule:
+    - cron: "0 */6 * * *" # every 6 hours
 
 jobs:
   build:
