--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,7 +7,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [master]
   schedule:
-    - cron: '0 7 * * 2'
+    - cron: '0 7 * * 2' # Tuesdays @ 7am
 
 jobs:
   analyse:
